se agrega el login a la pagina

--- a/sitioweb/templates/sitio/index.html
+++ b/sitioweb/templates/sitio/index.html
@@ -4,9 +4,9 @@
             <h1 class="display-3">Ola bb</h1>
             <p class="lead">Ya estoy comenzando a diseñar mi pagina</p>
             <hr class="my-2">
-            <p>Mies posa</p>
+            <p>Que ta chendo</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="Jumbo action Link" role="button">Tojas calientes aquí</a>
+                <a class="btn btn-primary btn-lg" href="Jumbo action Link" role="button">Peliar aquí</a>
             </p>
       </div>
   </div>
