--- a/sitioweb/templates/admin/login.html
+++ b/sitioweb/templates/admin/login.html
@@ -1,73 +1,97 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <title>Login del administrador</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <title>Login del administrador </title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
-</head>
-<body>
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-            
-            </div>
-            <div class="col-md-4">
-                    <br>
-                <div class="card">
-                    <div class="card-header">
-                        Inicio de sesión
-                    </div>
-                    <div class="card-body">
-                        
-                        <form action="/admin/login" method="post">
-
-                            <div class="mb-3">
-                              <label for="" class="form-label">Usuario</label>
-                              <input type="text"
-                                class="form-control" name="txtUsuario" id="txtUsuario" aria-describedby="helpId" placeholder="Escriba su usuario">
-                            
-                            </div>
-
-                            <div class="mb-3">
-                              <label for="" class="form-label">Contraseña:</label>
-                              <input type="text"
-                                class="form-control" name="txtPassword" id="txtPassword" aria-describedby="helpId" placeholder="Escriba su Contraseña">
-                              
-                            </div>
-
-                            <button type="submit" class="btn btn-success">Entrar</button>
-                        
-                        </form>
-
-                    </div>
-                    <div class="card-footer text-muted">
-                    
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-              
-            </div>
+      <div class="row">
+        <div class="col-md-4">
+        
         </div>
+        <div class="col-md-4">
+            <br>
+          <div class="card">
+            <div class="card-header">Inicio de sesion</div>
+            <div class="card-body">
+              
+                <form action="" method="post">
+                  <div class="mb-3">
+                    <label for="" class="form-label">Usuario</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      name="txtUsuario"
+                      id="txtUsuario"
+                      aria-describedby="helpId"
+                      placeholder="Escriba su Usuario"
+                    />
+                  </div>
+                  
+                <div class="mb-3">
+                  <label for="" class="form-label">Contraseña</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    name="txtPassword"
+                    id="txtPassword"
+                    aria-describedby="helpId"
+                    placeholder="Escriba su Contraseña"
+                  />
+
+                </div>
+                
+                <button
+                  type="submit"
+                  class="btn btn-success"
+                >
+                  Entrar
+                </button>
+                
+
+                </form>
+
+            </div>
+            <div class="card-footer text-muted"></div>
+          </div>
+          
+        </div>
+        <div class="col-md-4">
+          
+        </div>
+        
+        
+        
+      </div>
     </div>
+    
 
+    <!-- Bootstrap JavaScript Libraries -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
