se realiza cambios en la pagina, pendiente corregir el modulo de libros

--- a/sitioweb/templates/admin/cabecera.html
+++ b/sitioweb/templates/admin/cabecera.html
@@ -15,7 +15,9 @@
 <body>
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="nav navbar-nav">
-            <a class="nav-item nav-link active" href="#" aria-current="page">Home <span class="visually-hidden">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Home</a>
+            <a class="nav-item nav-link active" href="#" aria-current="/admin">Inicio</a>
+            <a class="nav-item nav-link" href="libros">Libros</a>
+            <a class="nav-item nav-link" href="cerrar">Cerrar</a>
+            <a class="nav-item nav-link" href="/">Sitio web</a>
         </div>
     </nav>
