--- a/sitioweb/templates/admin/index.html
+++ b/sitioweb/templates/admin/index.html
@@ -1,45 +1,14 @@
 {% include 'admin/cabecera.html' %}
 
 
-<div class="row align-items-md-stretch">
-    <div class="col-md-6">
-        <div
-            class="h-100 p-5 text-white bg-primary border rounded-3"
-        >
-            <h2>Change the background</h2>
-            <p>
-                Swap the background-color utility and add a `.text-*` color
-                utility to mix up the jumbotron look. Then, mix and match with
-                additional component themes and more.
-            </p>
-            <button
-                class="btn btn-outline-primary"
-                type="button"
-            >
-                Example button
-            </button>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div
-            class="h-100 p-5 bg-primary border rounded-3"
-        >
-            <h2>Add borders</h2>
-            <p>
-                Or, keep it light and add a border for some added definition
-                to the boundaries of your content. Be sure to look under the
-                hood at the source HTML here as we've adjusted the alignment and
-                sizing of both column's content for equal-height.
-            </p>
-            <button
-                class="btn Swap the background-color utility and add a `.text-*` color
-                utility to mix up the jumbotron look. Then, mix and match with
-                additional component themes and more."
-                type="button"
-            >
-                Example button
-            </button>
-        </div>
+<div class="p-5 bg-light">
+    <div class="container">
+        <h1 class="display-3">Bienvenido al administrador del sitio</h1>
+        <p class="lead">Aqui podrá administrar los libros del sitio web</p>
+        <hr class="my-2">
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="/libros" role="button">Empezar la gestión </a>
+        </p>
     </div>
 </div>
 
