--- a/sitioweb/templates/admin/libros.html
+++ b/sitioweb/templates/admin/libros.html
@@ -1,3 +1,100 @@
 {% include 'admin/cabecera.html' %}
-Administrador de libros
+</br>
+<div class="container">
+    <div class="row">
+        <div
+            class="col-md-5">
+
+        <div class="card">
+            <div class="card-header">Datos del libro </div>
+            <div class="card-body">
+              <form action="" method="post">
+                
+              
+              <div class="mb-3">
+                    <label for="" class="form-label">Nombre del libro</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        name="txtNombre"
+                        id="txtNombre"
+                        aria-describedby="helpId"
+                        placeholder="Escriba el nombre del libro"/> 
+                </div>
+                
+                <div class="mb-3">
+                    <label for="" class="form-label">Imagen:</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        name="txtImagen"
+                        id="txtImagen"
+                        aria-describedby="helpId"
+                        placeholder="Seleccione la Imagen"/>
+                </div>
+                
+                <div class="mb-3">
+                    <label for="txtURL" class="form-label">URL de descarga</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        name="txtURL"
+                        id="txtURL"
+                        aria-describedby="helpId"
+                        placeholder="Escriba la URL de descarga"/>
+                </div>
+                
+                <button
+                    type="submit"
+                    class="btn btn-primary"
+                >
+                    Agregar
+                </button>
+
+            
+                </form>
+
+            
+            </div>
+    </div>  
+            </div>
+
+
+            
+            <div class="col-med-7">
+
+                <div
+                     class="table">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Nombre</th>
+                                <th>Imagen</th>
+                                <th>URL</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Python</td>
+                                <td>imagen.jpg</td>
+                                <td>http://python.org</td>
+                                <td>Eliminar</td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+                    
+
+            </div>
+        
+        
+        
+    </div>
+</div>
+
+
+
 {% include 'admin/pie.html' %}
