--- a/sitioweb/templates/admin/login.html
+++ b/sitioweb/templates/admin/login.html
@@ -32,7 +32,7 @@
               
                 <form action="" method="post">
                   <div class="mb-3">
-                    <label for="" class="form-label">Usuario</label>
+                    <label for="txtUsuario" class="form-label">Usuario</label>
                     <input
                       type="text"
                       class="form-control"
@@ -44,7 +44,7 @@
                   </div>
                   
                 <div class="mb-3">
-                  <label for="" class="form-label">Contraseña</label>
+                  <label for="txtPassword" class="form-label">Contraseña</label>
                   <input
                     type="text"
                     class="form-control"
