--- a/sitioweb/templates/admin/libros.html
+++ b/sitioweb/templates/admin/libros.html
@@ -75,13 +75,21 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {%for libro in libros %}
                         <tr>
-                            <td>1</td>
-                            <td>Python</td> 
-                            <td>Imagen.jpg</td>
-                            <td>http://python.org</td>
-                            <td>Eliminar</td>
+                            <td>{{libro[0]}}</td>
+                            <td>{{libro[1]}}</td> 
+                            <td>{{libro[2]}}</td>
+                            <td>{{libro[3]}}</td>
+                            <td>
+                                <form action="/admin/libros/borrar" method="post">
+                                <input value="{{libro[0]}}" type="text" name="txtID" id="txtID">
+                                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                                </form>
+
+                            </td>
                         </tr>
+                        {% endfor %}
                         
                     </tbody>
                 </table>
