se realiza los ultimos ajustes para fase demo

--- a/sitioweb/templates/admin/libros.html
+++ b/sitioweb/templates/admin/libros.html
@@ -35,14 +35,7 @@
                     
                     <div class="mb-3">
                         <label for="txtURL" class="form-label">URL de descarga</label>
-                        <input
-                            type="text"
-                            class="form-control"
-                            name="txtURL"
-                            id="txtURL"
-                            aria-describedby="helpId"
-                            placeholder="Escriba la URL de descarga"
-                        />
+                        <input type="text" class="form-control" name="txtURL" id="txtURL" aria-describedby="helpId" placeholder="Escriba la URL de descarga"/>
                     </div>
                     
                     <button
@@ -52,10 +45,7 @@
                         Agregar
                     </button>
                     
-
-
                     </form>
-
 
                 </div>
                 <div class="card-footer text-muted"></div>
@@ -64,7 +54,7 @@
 
         <div class="col-md-7">
             
-            <table class="table">
+            <table class="table table-bordered">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -79,11 +69,17 @@
                         <tr>
                             <td>{{libro[0]}}</td>
                             <td>{{libro[1]}}</td> 
-                            <td>{{libro[2]}}</td>
-                            <td>{{libro[3]}}</td>
+                            <td>
+                                <img width="60" src="/img/{{libro[2]}}" class="img-fluid rounded-top" alt=""/>
+                            
+                            </td>
+                            <td>
+                                
+                                <a name="" id="" class="btn btn-success" href="{{libro[3]}}" role="button">Enlace</a>
+                            </td>
                             <td>
                                 <form action="/admin/libros/borrar" method="post">
-                                <input value="{{libro[0]}}" type="text" name="txtID" id="txtID">
+                                <input value="{{libro[0]}}" type="hidden" name="txtID" id="txtID">
                                     <button type="submit" class="btn btn-danger">Eliminar</button>
                                 </form>
 
