--- a/sitioweb/templates/admin/login.html
+++ b/sitioweb/templates/admin/login.html
@@ -26,43 +26,33 @@
         </div>
         <div class="col-md-4">
             <br>
+          {% if mensaje %}
+            <div class="alert alert-danger" role="alert">
+              <strong>{{ mensaje }}</strong>
+            </div>
+          {% endif %}
+
+        
+          
+
           <div class="card">
             <div class="card-header">Inicio de sesion</div>
             <div class="card-body">
               
-                <form action="" method="post">
+                <form action="/admin/login" method="post">
+
                   <div class="mb-3">
                     <label for="txtUsuario" class="form-label">Usuario</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      name="txtUsuario"
-                      id="txtUsuario"
-                      aria-describedby="helpId"
-                      placeholder="Escriba su Usuario"
-                    />
+                    <input type="text" class="form-control" name="txtUsuario" id="txtUsuario" aria-describedby="helpId" placeholder="Escriba su Usuario"/>
                   </div>
                   
                 <div class="mb-3">
                   <label for="txtPassword" class="form-label">Contraseña</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="txtPassword"
-                    id="txtPassword"
-                    aria-describedby="helpId"
-                    placeholder="Escriba su Contraseña"
-                  />
+                  <input type="password" class="form-control" name="txtPassword" id="txtPassword" aria-describedby="helpId" placeholder="Escriba su Contraseña"/>
+                  </div>
+                
+                <button type="submit" class="btn btn-success"> Entrar </button>
 
-                </div>
-                
-                <button
-                  type="submit"
-                  class="btn btn-success"
-                >
-                  Entrar
-                </button>
-                
 
                 </form>
 
