--- a/sitioweb/templates/sitio/cabecera.html
+++ b/sitioweb/templates/sitio/cabecera.html
@@ -8,17 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
 
 </head>
 <body>
-    <nav class="navbar navbar-expand navbar-light bg-light">
+    <nav class="navbar navbar-expand navbar-dark bg-primary">
         <div class="nav navbar-nav">
             <a class="nav-item nav-link" href="/">Inicio </a>
             <a class="nav-item nav-link" href="/libros">Libros</a>
             <a class="nav-item nav-link" href="/nosotros">Nosotros</a>
-            <a class="nav-item nav-link" href="/admin">Login</a>
+            <a class="nav-item nav-link" href="/admin/login">Login</a>
         </div>
     </nav>
     <div class="container">
