--- a/sitioweb/templates/sitio/index.html
+++ b/sitioweb/templates/sitio/index.html
@@ -1,12 +1,11 @@
 {% include 'sitio/cabecera.html' %}
   <div class="p-5 bg-light">
       <div class="container">
-            <h1 class="display-3">Ola bb</h1>
+            <h1 class="display-3">Bienvenido</h1>
             <p class="lead">Ya estoy comenzando a diseñar mi pagina</p>
             <hr class="my-2">
-            <p>Que ta chendo</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="Jumbo action Link" role="button">Peliar aquí</a>
+                <a class="btn btn-success btn-lg" href="/libros" role="button">Ver libros disponibles</a>
             </p>
       </div>
   </div>
