--- a/sitioweb/templates/sitio/nosotros.html
+++ b/sitioweb/templates/sitio/nosotros.html
@@ -1,5 +1,13 @@
 {% include 'sitio/cabecera.html' %}
 
-Seccion de Nosotros
+
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Nosotros</h4>
+        <p class="card-text">Mi nombre es Jeisson Daniel Peña</p>
+    </div>
+    <img class="card-img-top" src="https://cdn.pixabay.com/photo/2021/08/04/13/06/software-developer-6521720_1280.jpg" alt="Title" />
+</div>
+
 
 {% include 'sitio/pie.html' %}
